--- a/src/albumpage.html
+++ b/src/albumpage.html
@@ -28,33 +28,60 @@
 
 
   <!-- Jumbotron -->
-  <div class="container-fluid div-album-page pl-lg-5 pt-5">
-    <!-- img + text -->
-    <div class="row d-block d-md-flex d-md-inline justify-content-center" id="img-text-album ">
-      <img class="position-relative" src="/assets/albumpage/bohemian-rhapsody-cover.png"
-        alt="bohemian-rhapsody-album-cover" width="300px" height="300px">
-      <div class="text-white align-self-end">
-        <h4>ALBUM</h4>
-        <h1>Bohemian Rhapsody(The Original Soundtrack)</h1>
-        <p><img src="/assets/albumpage/bohemian-rhapsody-cover.png" class="rounded-img"
-            alt="band-logo-img-spotify"><span>
-            Queen</span> <span class="d-none d-md-inline">- 2018 - 22 songs, 1 hr
-            19 min
-          </span></p>
+  <!--  upper part  -->
+  <div id="upper-nav-album" class="container-fluid">
+    <div id="nav-album-page" class="d-none d-lg-flex justify-content-center">
+      <div id="arrows-album" class="d-flex justify-content-between">
+        <div class="p-sm-auto col-xl-10">
+          <div class="d-none d-md-flex justify-content-between" style="width: 8%;">
+            <a class="icon-round text-white"><i class="bi bi-arrow-left-short" style="font-size: 2rem;"></i></a>
+            <a class="icon-round text-white"><i class="bi bi-arrow-right-short" style="font-size: 2rem;"></i></a>
+          </div>
+        </div>
+      </div>
+      <div id="profile-album" class="ml-md-auto mb-auto mt-2 col-md-3 col-xl-2">
+        <div class="d-flex justify-content-center align-items-start"
+          style="background-color: rgba(0, 0, 0, 0.185); border-radius: 10px;">
+          <img class="mr-3 align-self-center" style="width: 2em; border-radius: 100%;"
+            src="https://pbs.twimg.com/profile_images/1281577317194760196/mG74FQIP.jpg" alt="Profile">
+          <p class="text-white mt-3 font-weight-bold" style="font-size: .8rem;">Diego Banovaz</p>
+          <i class="bi bi-caret-down-fill mt-3 text-white ml-1" style="font-size: .9rem;"></i>
+        </div>
       </div>
     </div>
-    <!-- end img + text -->
+    <!-- end of upper part -->
+
+
+    <!-- img + text -->
+    <div id="album-bohemian" class="container-fluid pb-5 div-album-page px-0 pl-lg-5 pt-5">
+      <div class="lg-row d-block d-lg-flex d-lg-inline mx-md-5 mx-lg-0" id="img-text-album">
+        <img src="/assets/albumpage/bohemian-rhapsody-cover.png" alt="bohemian-rhapsody-album-cover" width="300px"
+          height="300px">
+        <div class="text-white">
+          <h4>ALBUM</h4>
+          <h1>Bohemian Rhapsody(The Original Soundtrack)</h1>
+          <p><img src="/assets/albumpage/bohemian-rhapsody-cover.png" class="rounded-img"
+              alt="band-logo-img-spotify"><span>
+              Queen</span> <span class="d-none d-md-inline">- 2018 - 22 songs, 1 hr
+              19 min
+            </span></p>
+        </div>
+      </div>
+      <!-- end img + text -->
+    </div>
 
     <!--  buttons part -->
-    <div class="flex-row d-md-inline align-content-md-center buttons-wrapper">
-      <div class="position-absolute d-flex album-btn d-inline">
-        <div id="btn-play-album" class="d-none d-md-flex justify-content-center align-items-center"><i
-            class="bi bi-play-fill"></i>
-        </div>
-        <i class="bi bi-heart text-white"></i>
-        <a id="dots-btn-album">...</a>
-        <div id="btn-play-sm-album" class="d-inline d-md-none d-flex justify-content-center align-items-center"><i
-            class="bi bi-play-fill"></i>
+    <div id="buttons-album-wrapper">
+      <div class="flex-row d-md-inline align-content-md-center">
+        <div class="d-flex album-btn d-inline">
+          <div id="btn-play-album" class="d-none d-md-flex justify-content-center align-items-center"><i
+              class="bi bi-play-fill"></i>
+          </div>
+          <i class="bi bi-heart text-white"></i>
+          <a id="dots-btn-album">...</a>
+          <div id="btn-play-sm-album" class="d-inline d-md-none d-flex justify-content-center align-items-center">
+            <i class="bi bi-play-fill"></i>
+          </div>
         </div>
       </div>
     </div>
@@ -73,15 +100,15 @@
 
 
   <!-- Player -->
-  <div class="player-wrapper container-fluid px-0 fixed-bottom">
+  <div id="album-id-player" class="player-wrapper container-fluid px-0 fixed-bottom">
 
-    <div class="row d-block d-md-flex flex-md-row justify-content-between bg-player">
+    <div class="row d-block d-flex flex-row justify-content-between bg-player">
 
       <!--  img + title + artist-name -->
-      <div class="d-flex align-items-center img-wrapper mt-2 col-3 col-md-1">
+      <div class="d-flex flex-row align-items-center img-wrapper mt-2 col-3 col-md-1">
         <img class="img-album-player" src=" /assets/playicons/c49c9f23611294a7f7fbcbee3a22b2af.png"
           alt="queen-the-game-cover-art">
-        <div class="d-flex flex-column mt-1 pl-1">
+        <div class="d-flex flex-column pl-1">
           <h5>Another One Bites The Dust - Remastered 2011</h5>
           <p class="artist-name">Queen</p>
         </div>
@@ -95,7 +122,7 @@
 
       <!-- play icons  -->
       <div id="play-last-one" class="controls-player justify-content-center">
-        <div class="offset-lg-6 col-1 col-md-2 d-flex justify-content-lg-between mt-2">
+        <div class="offset-lg-6 col-1 col-md-2 d-none d-md-flex justify-content-lg-between mt-2">
           <a href="#"><img src="/assets/playicons/Shuffle.png" alt="shuffle-icon">
           </a>
           <a><img src="/assets/playicons/Previous.png" alt="previous-icon">
@@ -107,7 +134,7 @@
           <a><img src="/assets/playicons/Repeat.png" alt="repeat-icon">
           </a>
         </div>
-        <div class="d-flex align-items-center justify-content-lg-start player-part">
+        <div class="d-none d-md-flex align-items-center justify-content-lg-start player-part">
           <span>0.12</span>
           <span id="hr"></span>
           <span>3.34</span>
@@ -116,7 +143,7 @@
       <!-- end play icons  -->
 
       <!--  icons-right-volume -->
-      <div class="d-flex flex-row justify-content-end mr-5 mt-4 col-4 col-md-2 right-icons-player">
+      <div class="d-flex flex-row justify-content-end mr-5 mt-3 col-4 col-md-2 right-icons-player">
         <i class="bi bi-text-indent-left pr-2"></i>
         <i class="bi bi-speaker-fill pr-2"></i>
         <i class="bi bi-volume-up"></i>
@@ -125,20 +152,21 @@
       </div>
       <!--  end icons-right-volume -->
     </div>
-    <!-- End of Player-->
+  </div>
+  <!-- End of Player-->
 
 
 
-    <script src="./app.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-      crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
-      integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2"
-      crossorigin="anonymous"></script>
+  <script src="./app.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
+    integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
