--- a/src/albumpage.html
+++ b/src/albumpage.html
@@ -34,19 +34,23 @@
       <div id="arrows-album" class="d-flex justify-content-between">
         <div class="p-sm-auto col-xl-10">
           <div class="d-none d-md-flex justify-content-between" style="width: 8%;">
-            <a class="icon-round text-white"><i class="bi bi-arrow-left-short" style="font-size: 2rem;"></i></a>
-            <a class="icon-round text-white"><i class="bi bi-arrow-right-short" style="font-size: 2rem;"></i></a>
+            <a href="#" class="enlight icon-round text-white"><i class="bi bi-arrow-left-short"
+                style="font-size: 2rem;"></i></a>
+            <a href="#" class="enlight icon-round text-white"><i class="bi bi-arrow-right-short"
+                style="font-size: 2rem;"></i></a>
           </div>
         </div>
       </div>
       <div id="profile-album" class="ml-md-auto mb-auto mt-2 col-md-3 col-xl-2">
-        <div class="d-flex justify-content-center align-items-start"
-          style="background-color: rgba(0, 0, 0, 0.185); border-radius: 10px;">
-          <img class="mr-3 align-self-center" style="width: 2em; border-radius: 100%;"
-            src="https://pbs.twimg.com/profile_images/1281577317194760196/mG74FQIP.jpg" alt="Profile">
-          <p class="text-white mt-3 font-weight-bold" style="font-size: .8rem;">Diego Banovaz</p>
-          <i class="bi bi-caret-down-fill mt-3 text-white ml-1" style="font-size: .9rem;"></i>
-        </div>
+        <a class="enlight" href="#">
+          <div class="d-flex justify-content-center align-items-start enlight"
+            style="background-color: rgba(0, 0, 0, 0.185); border-radius: 10px;">
+            <img class="mr-3 align-self-center" style="width: 2em; border-radius: 100%;"
+              src="https://pbs.twimg.com/profile_images/1281577317194760196/mG74FQIP.jpg" alt="Profile">
+            <p class="text-white mt-3 font-weight-bold" style="font-size: .8rem;">Diego Banovaz</p>
+            <i class="bi bi-caret-down-fill mt-3 text-white ml-1" style="font-size: .9rem;"></i>
+          </div>
+        </a>
       </div>
     </div>
     <!-- end of upper part -->
@@ -62,7 +66,8 @@
           <h1>Bohemian Rhapsody(The Original Soundtrack)</h1>
           <p><img src="/assets/albumpage/bohemian-rhapsody-cover.png" class="rounded-img"
               alt="band-logo-img-spotify"><span>
-              Queen</span> <span class="d-none d-md-inline">- 2018 - 22 songs, 1 hr
+              <a class="enlight text-white" id="band-name" href="#">Queen</a></span> <span class="d-none d-md-inline">-
+              2018 - 22 songs, 1 hr
               19 min
             </span></p>
         </div>
@@ -74,13 +79,13 @@
     <div id="buttons-album-wrapper">
       <div class="flex-row d-md-inline align-content-md-center">
         <div class="d-flex album-btn d-inline">
-          <div id="btn-play-album" class="d-none d-md-flex justify-content-center align-items-center"><i
+          <div id="btn-play-album" class="on-pulse d-none d-md-flex justify-content-center align-items-center"><i
               class="bi bi-play-fill"></i>
           </div>
-          <i class="bi bi-heart text-white"></i>
-          <a id="dots-btn-album">...</a>
+          <i class="bi bi-heart text-white enlight"></i>
+          <a id="dots-btn-album text-white enlight">...</a>
           <div id="btn-play-sm-album" class="d-inline d-md-none d-flex justify-content-center align-items-center">
-            <i class="bi bi-play-fill"></i>
+            <i class="bi bi-play-fill enlight"></i>
           </div>
         </div>
       </div>
@@ -106,17 +111,19 @@
       <!--  ciao -->
       <!--  img + title + artist-name -->
       <div class="d-flex flex-row align-items-center img-wrapper mt-2 col-3 col-md-1">
-        <img class="img-album-player" src=" /assets/playicons/c49c9f23611294a7f7fbcbee3a22b2af.png" width="300px"
-          height="300px" alt="queen-the-game-cover-art">
+        <a href="#">
+          <img class="img-album-player" src=" /assets/playicons/c49c9f23611294a7f7fbcbee3a22b2af.png" width="300px"
+            height="300px" alt="queen-the-game-cover-art">
+        </a>
         <div class="d-flex flex-column pl-1">
-          <h5>Another One Bites The Dust - Remastered 2011</h5>
-          <p class="artist-name">Queen</p>
+          <h5><a href="#" class="enlight">Another One Bites The Dust - Remastered 2011</a></h5>
+          <p class="artist-name"><a href="#" class="enlight">Queen</a></p>
         </div>
         <div class="d-flex col-1 mb-4 align-items-center">
-          <i class="bi bi-heart mr-3" id="heart-player"></i>
-          <img class="d-inline ml-5 ml-lg-0 d-md-none" src="/assets/playicons/Play.png" width="20px" height="20px"
-            alt="">
-          <i class="bi bi-aspect-ratio"></i>
+          <i class="bi bi-heart mr-3 enlight" id="heart-player"></i>
+          <img class="d-inline ml-5 ml-lg-0 d-md-none enlight" src="/assets/playicons/Play.png" width="20px"
+            height="20px" alt="">
+          <i class="bi bi-aspect-ratio enlight"></i>
         </div>
       </div>
       <!--  end img + title + artist-name -->
@@ -124,15 +131,15 @@
       <!-- play icons  -->
       <div id="play-last-one" class="controls-player justify-content-center">
         <div class="offset-lg-6 col-1 col-md-2 d-none d-md-flex justify-content-lg-between mt-2">
-          <a href="#"><img src="/assets/playicons/Shuffle.png" alt="shuffle-icon">
+          <a href="#"><img class="enlight" src="/assets/playicons/Shuffle.png" alt="shuffle-icon">
           </a>
-          <a><img src="/assets/playicons/Previous.png" alt="previous-icon">
+          <a href="#" class="enlight"><img src="/assets/playicons/Previous.png" alt="previous-icon">
           </a>
-          <a><i class="bi bi-play-fill play-icon-player"></i>
+          <a href="#"><i class="bi bi-play-fill play-icon-player enlight"></i>
           </a>
-          <a><img src="/assets/playicons/Next.png" alt="next-icon">
+          <a href="#"><img class="enlight" src="/assets/playicons/Next.png" alt="next-icon">
           </a>
-          <a><img src="/assets/playicons/Repeat.png" alt="repeat-icon">
+          <a href="#"><img class="enlight" src="/assets/playicons/Repeat.png" alt="repeat-icon">
           </a>
         </div>
         <div class="d-none d-md-flex align-items-center justify-content-lg-start player-part">
@@ -145,9 +152,9 @@
 
       <!--  icons-right-volume -->
       <div class="d-flex flex-row justify-content-end mr-5 mt-3 col-4 col-md-2 right-icons-player">
-        <i class="bi bi-text-indent-left pr-2"></i>
-        <i class="bi bi-speaker-fill pr-2"></i>
-        <i class="bi bi-volume-up"></i>
+        <i class="bi bi-text-indent-left pr-2 enlight"></i>
+        <i class="bi bi-speaker-fill pr-2 enlight"></i>
+        <i class="bi bi-volume-up enlight"></i>
         <div class="input-wrapper"><input class="ml-1" id="input-player" type="range" value="100" />
         </div>
       </div>
