--- a/src/home_Page.html
+++ b/src/home_Page.html
@@ -480,112 +480,17 @@
                     <!-- END of Shows to try  -->
                 </div>
 
-
-                <!-- Shows to try  -->
-                <section id="shows-to-try">
-                    <div class="container-fluid">
-                        <div class="row my-3">
-                            <span class="mr-auto">
-                                <h4 class=" mt-5"> <b>Shows to try</b> </h4>
-                                <p>Podcast we think you'll get hooked on</p>
-                            </span>
-                            <h6 class="mt-5 align-self-end pb-2">SEE ALL</h6>
-                        </div>
-
-                        <div class="custom-row">
-                            <div class="column">
-                                <div class="card p-2">
-                                    <img src="../assets/homepage/img9.jpg" class="card-img-top" alt="cover album">
-                                    <div class="card-body p-0 my-1">
-                                        <h5 class="card-title"> <b>Album Title</b> </h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make
-                                            up the bulk of the card's content.</p>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="column">
-                                <div class="card p-2">
-                                    <img src="../assets/homepage/img10.jpg" class="card-img-top" alt="cover album">
-                                    <div class="card-body p-0 my-1">
-                                        <h5 class="card-title"> <b>Album Title</b> </h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make
-                                            up the bulk of the card's content.</p>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="column">
-                                <div class="card p-2">
-                                    <img src="../assets/homepage/img11.jpg" class="card-img-top" alt="cover album">
-                                    <div class="card-body p-0 my-1">
-                                        <h5 class="card-title"> <b>Album Title</b> </h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make
-                                            up the bulk of the card's content.</p>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="column">
-                                <div class="card p-2">
-                                    <img src="../assets/homepage/img21.jpg" class="card-img-top" alt="cover album">
-                                    <div class="card-body p-0 my-1">
-                                        <h5 class="card-title"> <b>Album Title</b> </h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make
-                                            up the bulk of the card's content.</p>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="column">
-                                <div class="card p-2">
-                                    <img src="../assets/homepage/IMG13.jpg" class="card-img-top" alt="cover album">
-                                    <div class="card-body p-0 my-1">
-                                        <h5 class="card-title"> <b>Album Title</b> </h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make
-                                            up the bulk of the card's content.</p>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="column">
-                                <div class="card p-2">
-                                    <img src="../assets/homepage/img14.jpg" class="card-img-top" alt="cover album">
-                                    <div class="card-body p-0 my-1">
-                                        <h5 class="card-title"> <b>Album Title</b> </h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make
-                                            up the bulk of the card's content.</p>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="column">
-                                <div class="card p-2">
-                                    <img src="../assets/homepage/img.15.jpg" class="card-img-top" alt="cover album">
-                                    <div class="card-body p-0 my-1">
-                                        <h5 class="card-title"> <b>Album Title</b> </h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make
-                                            up the bulk of the card's content.</p>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="column">
-                                <div class="card p-2">
-                                    <img src="../assets/homepage/img16.jpg" class="card-img-top" alt="cover album">
-                                    <div class="card-body p-0 my-1">
-                                        <h5 class="card-title"> <b>Album Title</b> </h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make
-                                            up the bulk of the card's content.</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </section>
-                <!-- END of Shows to try  -->
             </div>
 
+
+            <!--new section-->
+            <section id="new-section">
+                <div class="container-fluid">
+                    <div class="row">
+                        
+                    </div>
+                </div>
+            </section>
 
     </main>
 
@@ -646,6 +551,7 @@
     </div>
     <!-- End of Player-->
 
+    <script src="./index.js"></script>
 
 </body>
 
