--- a/src/home_Page.html
+++ b/src/home_Page.html
@@ -478,20 +478,28 @@
                         </div>
                     </section>
                     <!-- END of Shows to try  -->
+
+
+
+                    <!--new section
+                    <section id="new-section">
+                        <div class="container-fluid">
+                            <div class="custom-row">
+                                <div class="row my-3">
+                                    <span class="mr-auto">
+                                        <h4 class=" mt-5"> <b>Shows to try</b> </h4>
+                                        <p>Podcast we think you'll get hooked on</p>
+                                    </span>
+                                    <h6 class="mt-5 align-self-end pb-2">SEE ALL</h6>
+                                </div>
+
+                            </div>
+                        </div>
+                    </section>
+                    -->
                 </div>
 
             </div>
-
-
-            <!--new section-->
-            <section id="new-section">
-                <div class="container-fluid">
-                    <div class="row">
-
-                    </div>
-                </div>
-            </section>
-
     </main>
 
     <!-- Player -->
@@ -551,7 +559,17 @@
     </div>
     <!-- End of Player-->
 
-    <script src="./index.js"></script>
+    
+    <script src="./app.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
+    integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2"
+    crossorigin="anonymous"></script>
 
 </body>
 
